# sqlite

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: pager.h  vector.h
include/collections/: vector.h
include/storage/: constants.h  journal.h  pager.h
src/: pager.c  vector.c
src/collections/: vector.c
src/storage/: journal.c  pager.c
tests/: pager_test.c
tests/storage/: journal_test.c  pager_test.c
